# json_builder

./: Cargo.toml  Dioxus.toml  build.rs  index.html  package-lock.json  package.json
docs/: index.html  json_builder-ea4bc5f65773ebae_bg.wasm
docs/assets/dioxus/: name.js  name_bg.wasm
docs/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
src/: main.rs
